CSS to prevent zooming on small screen when inputting search

--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,9 @@ button {
 img {
     width: 100%;
 }
+
+input[type='text'],
+input[type='search'],
+textarea {
+  font-size: 16px;
+}
